tests/compiler/errors/match_binding_shadow.casa
# expect: DUPLICATE_NAME

enum Maybe {
    Just (int)
    Nothing
}

fn shadow_outer_match m:Maybe {
    7 = value
    m match
        Maybe::Just(value) => { value drop }
        Maybe::Nothing => { }
    end
}
42 Maybe::Just shadow_outer_match
